--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -240,7 +240,7 @@ biosolids_2021_chemicals <- get_chemicals_in_list(list_name = 'BIOSOLIDS2021',
 head(biosolids_2021_chemicals)
 ```
 
-Finally, is one is interested in finding all lists that contain a particular chemical, one may do so by using the DTXSID of the chemical in question.
+Finally, if one is interested in finding all lists that contain a particular chemical, one may do so by using the DTXSID of the chemical in question.
 
 ```{r, bpa-lists}
 bpa_lists <- get_lists_containing_chemical(DTXSID = 'DTXSID7020182',
