--- a/vignettes/quickstart.Rmd
+++ b/vignettes/quickstart.Rmd
@@ -33,7 +33,7 @@ Users who are not familiar or experienced with using APIs may not find it appeal
 
 ## API key
 
-Before getting started, a user must have an API key ready to use in order to access the CCTE APIs. This can be obtained from the admins of the CCTE APIs by emailing [CCTE API Admins](mailto:ccte_api@epa.gov). In this vignette, the key will be stored as `my_key`.
+Before getting started, a user must have an API key ready to use in order to access the CCTE APIs. This can be obtained from the admins of the CCTE APIs by emailing [CCTE API Admins](mailto:ccte_api@epa.gov). In this vignette, the key will be stored as the variable `my_key`.
 
 To run this vignette locally, execute the following code prior to knitting the vignette (in fact, prior to downloading the package). 
 
