--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ if (!library(devtools, logical.return = TRUE)){
 # Set API key to build vignette properly. If not run in this order, the Vignette will not build correctly!!!
 Sys.setenv('CCTE_API_KEY' = '<YOUR API KEY>')
 
-devtools::install_git(url = 'https://bitbucket.epa.gov/scm/~pkruse/ccdr.git',
+devtools::install_git(url = 'https://bitbucket.epa.gov/scm/ccdr1/ccdr.git',
                       build_vignettes = TRUE)
 ```
 
